--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>YouTube Video Player</h1>
+        <h1>YouTube Video Player by Provoke</h1>
         <div class="video-container">
             <div id="player"></div>
         </div>
         <div class="input-container">
             <label for="videoId">Enter YouTube Video ID:</label>
             <input type="text" id="videoId" placeholder="Enter video ID">
-            <button onclick="loadVideo()">Load Video</button>
+            <button onclick="loadVideo()">Enjoy</button>
         </div>
     </div>
     <script src="https://www.youtube.com/iframe_api"></script>
